Fix T64253: missing update when moving nodegroup input/output sockets up or down

Reviewers: brecht

Maniphest Tasks: T64253

Differential Revision: https://developer.blender.org/D4959