source/blender/editors/space_node/node_edit.c
@@ -2418,6 +2418,7 @@ static int ntree_socket_move_exec(bContext *C, wmOperator *op)
     }
   }
 
+  ntree->update |= NTREE_UPDATE_GROUP;
   ntreeUpdateTree(CTX_data_main(C), ntree);
 
   snode_notify(C, snode);
